add filebrowser handler
